<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_background"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/btnClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/button_rounded_corners_red"
        android:text="@string/close_button" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/font"
        android:text="@string/incoming_payment"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoPurpose"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/info_icon"
            android:contentDescription="@string/info_icon" />

        <EditText
            android:id="@+id/inputPurpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:fontFamily="@font/font"
            android:hint="@string/detail_placeholder_what"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoAmount"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/logo_money"
            android:contentDescription="@string/euro_icon" />

        <EditText
            android:id="@+id/inputAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/detail_placeholder_amount"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:fontFamily="@font/font"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoDate"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/calendar_icon"
            android:contentDescription="@string/calender_icon" />

        <EditText
            android:id="@+id/inputDate"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_left_rounded_green"
            android:fontFamily="@font/font"
            android:hint="@string/detail_placeholder_when"
            android:inputType="date"
            android:padding="10dp"
            android:textSize="20sp"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/calendar_btn"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/button_right_rounded_green"
            android:contentDescription="@string/calender_icon"
            android:paddingEnd="3dp"
            app:srcCompat="@drawable/ic_calendar_black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoCategory"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_category"
            android:contentDescription="@string/category_icon" />

        <Spinner
            android:id="@+id/inputCategory"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/detail_placeholder_payment"
            android:padding="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoMethod"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_payment"
            android:contentDescription="@string/creditcard_icon" />

        <Spinner
            android:id="@+id/inputMethod"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/detail_placeholder_payment"
            android:padding="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/addBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_corners_green"
        android:text="@string/add_bill"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:fontFamily="@font/font"/>

</LinearLayout>