<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ItemDetailActivity"
    android:background="#FFF">


    <ImageView
        android:id="@+id/detailHeader"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:layout_marginTop="-50sp"
        app:srcCompat="@drawable/business"
        tools:srcCompat="@drawable/geschenk_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detailIcon1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/info_icon" />

            <EditText
                android:id="@+id/detailPurpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:fontFamily="@font/font"
                android:lines="1"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/detail_placeholder_what"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detailIcon2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/calendar_icon" />

            <EditText
                android:id="@+id/detailDate"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:fontFamily="@font/font"
                android:inputType="date"
                android:lines="1"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/detail_placeholder_when"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/calendarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_calendar_black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detailIcon3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/logo_money" />

            <EditText
                android:id="@+id/detailAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:fontFamily="@font/font"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/detail_placeholder_amount"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detailIcon4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_category" />

            <Spinner
                android:id="@+id/detailCategory"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:spinnerMode="dropdown"
                android:text="@string/detail_placeholder_category" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detailIcon5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_payment" />

            <Spinner
                android:id="@+id/detailMethod"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:spinnerMode="dropdown"
                android:text="@string/detail_placeholder_payment" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="6dp"
        android:src="@drawable/ic_edit"
        app:fabSize="normal" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        app:elevation="6dp"
        app:srcCompat="@drawable/done"
        tools:srcCompat="@drawable/doneoutline" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>