...
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="50dp">

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/itemRecyclerView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="4dp"
          android:scrollbars="vertical"
          android:background="#dadbf0"
          android:layoutAnimation="@anim/layout_animation">

      </androidx.recyclerview.widget.RecyclerView>

   </RelativeLayout>

   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/fab_add"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="end|bottom"
       android:layout_margin="16dp"
       android:backgroundTint="@color/colorPrimary"
       android:elevation="6dp"
...
