...
    <string name="detail_placeholder_amount">Betrag?</string>
    <string name="detail_placeholder_category">Kategorie?</string>
    <string name="detail_placeholder_payment">Zahlungsmethode?</string>

    <string name="incoming_payment">Zahlungseingang:</string>
    <string name="close_button">x</string>
    <string name="add_bill">Hinzufügen</string>

    <string name="value_zero">0.00€</string>
    <string name="category">Kategorie:</string>
    <!--Strings bar chart view -->
    <string name="grocery">Einkauf: </string>
    <string name="food">Essen: </string>
...
